--- a/style.css
+++ b/style.css
@@ -29,14 +29,18 @@
     top: 8px;
 }
 
-#menu-btn:checked ~ .menu-btn span {
+#menu-btn-check:checked ~ .menu-btn span {
     background-color: rgba(255, 255, 255, 0);
 }
-#menu-btn-checked ~ .menu-btn span::before {
+#menu-btn-check:checked ~ .menu-btn span::before {
     bottom: 0;
     transform: rotate(45deg);
 }
 #menu-btn-check:checked ~ .menu-btn span::after {
     top: 0;
     transform: rotate(-45deg);
+}
+
+#menu-btn-check {
+    display: none;
 }
