--- a/style.css
+++ b/style.css
@@ -8,7 +8,7 @@
     justify-content: center;
     align-items: center;
     z-index: 90;
-    background-color: brown;
+    background-color:beige;
 }
 
 .menu-btn span,
@@ -43,4 +43,61 @@
 
 #menu-btn-check {
     display: none;
+}
+
+.menu-content {
+    width: 100%;
+    height: 100%;
+    position: fixed;
+    top: 0;
+    left: 0;
+    z-index: 80;
+    background-color: salmon;
+}
+
+.menu-content ul {
+    padding: 70px 10px 0;
+}
+.menu-content ul li {
+    border-bottom: solid 1px #ffffff;
+    list-style: none;
+}
+.menu-content ul li a { 
+    display: block;
+    width: 100%;
+    font-size: 15px;
+    box-sizing: border-box;
+    color: #ffffff;
+    text-decoration: none;
+    padding: 9px 15px 10px 0;
+    position: relative;
+}
+
+ /*右矢印*/
+.menu-content ul li a::before {
+    content: "";
+    width: 7px;
+    height: 7px;
+    border-top: solid 2px #ffffff;
+    border-right: solid 2px #ffffff;
+    transform: rotate(45deg);
+    position: absolute;
+    right: 11px;
+    top: 16px;
+}
+
+/* メニュー外に */
+.menu-content {
+    width: 100%;
+    height: 100%;
+    position: fixed;
+    top: 0;
+    left: 100%;
+    z-index: 80;
+    background-color:rgb(252, 148, 136);
+    transform: all 0.5s; 
+}
+
+#menu-btn-check:checked ~ .menu-content {
+    left: 0;
 }
