--- a/style.css
+++ b/style.css
@@ -166,9 +166,7 @@ html {
 
   /* work */
   .work {
-      display: flex;
-      justify-content: center;
-      align-items: center;
+      margin-top: 100px;
   }
   
   
