--- a/style.css
+++ b/style.css
@@ -148,7 +148,6 @@ html {
     text-align:center;
     top:50%;
     transform:translate(-50%, -50%);
-    margin-bottom: 300px;
    
   }
   
@@ -166,8 +165,8 @@ html {
   }
 
   /* work */
-  .work {
-      margin-top: 100px;
+  .work2 {
+      margin-right: 0;
   }
   
   
