--- a/work.css
+++ b/work.css
@@ -101,3 +101,39 @@
 #menu-btn-check:checked ~ .menu-content {
     left: 0;
 }
+
+/* work */
+
+body {
+    background-color: rgb(248, 146, 134);
+}
+
+main h1{
+    margin-left: auto;
+    margin-right: auto;
+    text-align: center;
+    background-color: seashell;
+    padding-top: 10px;
+    padding-left: 50px;
+    padding-right: 50px;
+    padding-bottom: 0px;
+    width: 300px;
+    margin-bottom: 0px;
+}
+main p {
+    margin-left: auto;
+    margin-right: auto;
+    text-align: center;
+    background-color: seashell;
+    margin-top: 0px;
+    padding-left: 50px;
+    padding-right: 50px;
+    padding-top: 0px;
+    padding-bottom: 10px;
+    width: 300px;
+}
+
+.work {
+    display: flax;
+    justify-content: center;
+}
