--- a/work.css
+++ b/work.css
@@ -134,6 +134,8 @@ main p {
 }
 
 .work {
+    margin-left: auto;
+    margin-right: auto;
     display: grid;
     float: left;
     position: relative;
@@ -144,9 +146,11 @@ main p {
     box-shadow: 5px 5px 5px #222;
     z-index: 1;
     box-sizing: border-box;
-
+    grid-template-columns: 100px 100px 100px;
+    grid-template-rows: 100px 100px 100px;
 }
 
 .work1 {
-    grid-template-columns: 200px 50px 100px;
+    grid-column-start: 1;
+    grid-column-end: 2;
 }
