--- a/work.css
+++ b/work.css
@@ -133,24 +133,71 @@ main p {
     width: 300px;
 }
 
-.work {
-    margin-left: auto;
-    margin-right: auto;
-    display: grid;
-    float: left;
-    position: relative;
-    width: 1000px;
-    margin: 0 20px 48px 0;
-    border: 10px solid #fff;
-    background: #fff;
-    box-shadow: 5px 5px 5px #222;
-    z-index: 1;
-    box-sizing: border-box;
-    grid-template-columns: 100px 100px 100px;
-    grid-template-rows: 100px 100px 100px;
+.work1st {
+    
+    display: flex;
+}
+.work2st {
+    display: flex;
 }
 
 .work1 {
-    grid-column-start: 1;
-    grid-column-end: 2;
+    margin: 0 20px 50px 0;
+    margin-left: auto;
+    margin-right: auto;
+    background: #fff;
+    padding: 5px 20px 5px;
+    border: 10px solid #fff;
+    box-shadow: 5px 5px 5px #222;
+}
+
+.work2 {
+    margin: 0 20px 50px 0;
+    margin-left: auto;
+    margin-right: auto;
+    background: #fff;
+    padding: 50px 50px  20px 50px;
+    border: 10px solid #fff;
+    box-shadow: 5px 5px 5px #222;
+}
+
+.work3 {
+    margin: 0 20px 50px 0;
+    margin-left: auto;
+    margin-right: auto;
+    background: #fff;
+    padding: 20px 50px 5px;
+    border: 10px solid #fff;
+    box-shadow: 5px 5px 5px #222;
+}
+
+.work4 {
+    margin: 0 20px 50px 0;
+    margin-left: auto;
+    margin-right: auto;
+    background: #fff;
+    padding: 20px 50px 5px;
+    border: 10px solid #fff;
+    box-shadow: 5px 5px 5px #222;
+}
+
+
+.work5 {
+    margin: 0 20px 50px 0;
+    margin-left: auto;
+    margin-right: auto;
+    background: #fff;
+    padding: 20px 50px 5px;
+    border: 10px solid #fff;
+    box-shadow: 5px 5px 5px #222;
+}
+
+.work6 {
+    margin: 0 20px 50px 0;
+    margin-left: auto;
+    margin-right: auto;
+    background: #fff;
+    padding: 20px 50px 5px;
+    border: 10px solid #fff;
+    box-shadow: 5px 5px 5px #222;
 }
