--- a/work.css
+++ b/work.css
@@ -53,6 +53,9 @@
     left: 0;
     z-index: 80;
     background-color: salmon;
+    text-align: center;
+    transition: all .5s;
+    
 }
 
 .menu-content ul {
@@ -61,6 +64,8 @@
 .menu-content ul li {
     border-bottom: solid 1px #ffffff;
     list-style: none;
+    margin-top: 50px;
+    
 }
 .menu-content ul li a { 
     display: block;
@@ -106,98 +111,279 @@
 
 body {
     background-color: rgb(248, 146, 134);
+    
+    margin-left: 0px;
+    margin-right: 0px;
+    margin-bottom: 100px;
 }
 
 main h1{
+    color: salmon;
     margin-left: auto;
     margin-right: auto;
     text-align: center;
-    background-color: seashell;
+    background-color: rgb(255, 255, 255);
     padding-top: 10px;
     padding-left: 50px;
     padding-right: 50px;
     padding-bottom: 0px;
     width: 300px;
     margin-bottom: 0px;
+    border-top: ridge 20px plum;
+    
 }
 main p {
     margin-left: auto;
     margin-right: auto;
     text-align: center;
-    background-color: seashell;
+    background-color: rgb(255, 255, 255);
     margin-top: 0px;
+    margin-bottom: 50px;
     padding-left: 50px;
     padding-right: 50px;
     padding-top: 0px;
     padding-bottom: 10px;
     width: 300px;
+    border-bottom-left-radius: 10px;
+    border-bottom-right-radius: 10px;
+    font-family: monospace;
 }
 
 .work1st {
-    
     display: flex;
+    
+    justify-content: space-around;
 }
 .work2st {
     display: flex;
+    justify-content: space-around;
+    padding-left: 30px;
+}
+
+.work3st {
+    display: flex;
+    justify-content: space-around;
+    
 }
 
 .work1 {
-    margin: 0 0px 50px 0;
-    margin-left: auto;
-    margin-right: auto;
+    margin: 0 10px 50px 10px;
+    padding-bottom: 20px;
+    height: 300px;
+    width: 400px;
     background: #fff;
-    padding: 0px 10px 0px;
     border: 10px solid #fff;
     box-shadow: 5px 5px 5px #222;
+    border-radius: 20px;
+    text-align: center;
 }
 
 .work2 {
-    margin: 0 20px 50px 0;
-    margin-left: auto;
-    margin-right: auto;
+    margin: 0 10px 50px 10px;
+    padding-top: 50px;
+    padding-bottom: 50px;
+    padding-left: 20px;
+    height: 200px;
+    width: 350px;
     background: #fff;
-    padding: 50px 50px  20px 50px;
     border: 10px solid #fff;
     box-shadow: 5px 5px 5px #222;
+    border-radius: 20px;
+    text-align: center;
+    
 }
 
 .work3 {
-    margin: 0 20px 50px 0;
-    margin-left: auto;
-    margin-right: auto;
+    margin: 40px 10px 50px 10px;
+    width: 200px;
+    height: 350px;
     background: #fff;
-    padding: 20px 50px 5px;
+    padding: 30px 60px 0px 20px;
     border: 10px solid #fff;
     box-shadow: 5px 5px 5px #222;
+    border-radius: 20px;
+    text-align: center;
 }
 
 .work4 {
-    margin: 0 20px 50px 0;
-    margin-left: auto;
-    margin-right: auto;
+    margin: 70px 10px 50px 10px;
+    height: 250px;
+    width: 250px;
+    padding: 50px 20px 10px 30px;
     background: #fff;
-    padding: 20px 50px 5px;
     border: 10px solid #fff;
     box-shadow: 5px 5px 5px #222;
+    border-radius: 20px;
+    text-align: center;
 }
 
 
 .work5 {
-    margin: 0 20px 50px 0;
-    margin-left: auto;
-    margin-right: auto;
+    margin: 40px 10px 50px 10px;
+    height: 250px;
+    width: 300px;
     background: #fff;
     padding: 20px 50px 5px;
     border: 10px solid #fff;
     box-shadow: 5px 5px 5px #222;
+    border-radius: 20px;
+    text-align: center;
 }
 
 .work6 {
-    margin: 0 20px 50px 0;
-    margin-left: auto;
-    margin-right: auto;
+    margin: 40px 20px 50px 10px;
+    height: 250px;
+    width: 300px;
     background: #fff;
     padding: 20px 50px 5px;
     border: 10px solid #fff;
     box-shadow: 5px 5px 5px #222;
+    border-radius: 20px;
+    text-align: center;
 }
+
+/* ボタン1 */
+.btn-circle {
+    margin-top: 50px;
+    margin-left: 0;
+    margin-right: 0;
+    
+    display: inline-block;
+    padding: 0.5em 1em;
+    text-decoration: none;
+    background: #fff4b5;/*ボタン色*/
+    color: #f3c736;/*ボタン色と同じに*/
+    box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.29);
+    border-bottom: solid 3px #627295;
+    border-radius: 50px;/*角の丸み*/
+    font-weight: bold;
+    text-shadow: -1px -1px rgba(255, 255, 255, 0.44), 1px 1px rgba(0, 0, 0, 0.38);
+}
+.btn-circle:active {
+    /*ボタンを押したとき*/
+    -webkit-transform: translateY(4px);
+    transform: translateY(4px);
+    box-shadow: 0px 0px 1px rgba(0, 0, 0, 0.2);
+    border-bottom: none;
+  }
+  
+
+/* ボタン２ */
+.btn-circle2 {
+    margin-top: 80px;
+    margin-left: 0;
+    margin-right: 0;
+    display: inline-block;
+    padding: 0.5em 1em;
+    text-decoration: none;
+    background: #fff4b5;/*ボタン色*/
+    color: #f3c736;/*ボタン色と同じに*/
+    box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.29);
+    border-bottom: solid 3px #627295;
+    border-radius: 50px;/*角の丸み*/
+    font-weight: bold;
+    text-shadow: -1px -1px rgba(255, 255, 255, 0.44), 1px 1px rgba(0, 0, 0, 0.38);
+}
+.btn-circle2:active {
+    /*ボタンを押したとき*/
+    -webkit-transform: translateY(4px);
+    transform: translateY(4px);
+    box-shadow: 0px 0px 1px rgba(0, 0, 0, 0.2);
+    border-bottom: none;
+  }
+  
+/* ボタン3 */
+.btn-circle3 {
+    margin-top: 80px;
+    margin-left: 0;
+    margin-right: 0;
+    display: inline-block;
+    padding: 0.5em 1em;
+    text-decoration: none;
+    background: #fff4b5;/*ボタン色*/
+    color: #f3c736;/*ボタン色と同じに*/
+    box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.29);
+    border-bottom: solid 3px #627295;
+    border-radius: 50px;/*角の丸み*/
+    font-weight: bold;
+    text-shadow: -1px -1px rgba(255, 255, 255, 0.44), 1px 1px rgba(0, 0, 0, 0.38);
+}
+.btn-circle3:active {
+    /*ボタンを押したとき*/
+    -webkit-transform: translateY(4px);
+    transform: translateY(4px);
+    box-shadow: 0px 0px 1px rgba(0, 0, 0, 0.2);
+    border-bottom: none;
+  }
+  
+/* ボタン4 */
+.btn-circle4 {
+    margin-top: 100px;
+    margin-left: 0;
+    margin-right: 0;
+    display: inline-block;
+    padding: 0.5em 1em;
+    text-decoration: none;
+    background: #fff4b5;/*ボタン色*/
+    color: #f3c736;/*ボタン色と同じに*/
+    box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.29);
+    border-bottom: solid 3px #627295;
+    border-radius: 50px;/*角の丸み*/
+    font-weight: bold;
+    text-shadow: -1px -1px rgba(255, 255, 255, 0.44), 1px 1px rgba(0, 0, 0, 0.38);
+}
+.btn-circle4:active {
+    /*ボタンを押したとき*/
+    -webkit-transform: translateY(4px);
+    transform: translateY(4px);
+    box-shadow: 0px 0px 1px rgba(0, 0, 0, 0.2);
+    border-bottom: none;
+  }
+  
+/* ボタン5 */
+.btn-circle5 {
+    margin-top: 100px;
+    margin-left: 0;
+    margin-right: 0;
+    display: inline-block;
+    padding: 0.5em 1em;
+    text-decoration: none;
+    background: #fff4b5;/*ボタン色*/
+    color: #f3c736;/*ボタン色と同じに*/
+    box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.29);
+    border-bottom: solid 3px #627295;
+    border-radius: 50px;/*角の丸み*/
+    font-weight: bold;
+    text-shadow: -1px -1px rgba(255, 255, 255, 0.44), 1px 1px rgba(0, 0, 0, 0.38);
+}
+.btn-circle5:active {
+    /*ボタンを押したとき*/
+    -webkit-transform: translateY(4px);
+    transform: translateY(4px);
+    box-shadow: 0px 0px 1px rgba(0, 0, 0, 0.2);
+    border-bottom: none;
+  }
+
+/* ボタン6 */
+.btn-circle6 {
+    margin-top: 100px;
+    margin-left: 0;
+    margin-right: 0;
+    display: inline-block;
+    padding: 0.5em 1em;
+    text-decoration: none;
+    background: #fff4b5;/*ボタン色*/
+    color: #f3c736;/*ボタン色と同じに*/
+    box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.29);
+    border-bottom: solid 3px #627295;
+    border-radius: 50px;/*角の丸み*/
+    font-weight: bold;
+    text-shadow: -1px -1px rgba(255, 255, 255, 0.44), 1px 1px rgba(0, 0, 0, 0.38);
+}
+.btn-circle6:active {
+    /*ボタンを押したとき*/
+    -webkit-transform: translateY(4px);
+    transform: translateY(4px);
+    box-shadow: 0px 0px 1px rgba(0, 0, 0, 0.2);
+    border-bottom: none;
+  }
