--- a/work.css
+++ b/work.css
@@ -198,7 +198,7 @@ main p {
     width: 200px;
     height: 350px;
     background: #fff;
-    padding: 30px 60px 0px 20px;
+    padding: 30px 70px 0px 40px;
     border: 10px solid #fff;
     box-shadow: 5px 5px 5px #222;
     border-radius: 20px;
@@ -219,7 +219,7 @@ main p {
 
 
 .work5 {
-    margin: 40px 10px 50px 10px;
+    margin: 60px 10px 50px 10px;
     height: 250px;
     width: 300px;
     background: #fff;
@@ -386,4 +386,8 @@ main p {
     transform: translateY(4px);
     box-shadow: 0px 0px 1px rgba(0, 0, 0, 0.2);
     border-bottom: none;
+  }
+
+  .dai1 {
+      color: salmon;
   }
