--- a/work1.css
+++ b/work1.css
@@ -152,6 +152,7 @@ main p {
 
 /* work1 */
 
+
 .ex {
     color: rgb(0, 0, 0);
     padding-top: 30px;
@@ -171,5 +172,21 @@ main p {
     text-align: center;
 }
 
+.next {
+        border-radius: 50%;
+        line-height: 100px;
+        width: 100px;
+        height: 100px;
+        padding: 0;
+        -webkit-box-shadow: 0 5px 0 #e6d900;
+        box-shadow: 0 5px 0 #e6d900;
+      }
+      
+a.next:hover {
+        -webkit-transform: translate(0, 3px);
+        transform: translate(0, 3px);
+        -webkit-box-shadow: 0 2px 0 #e6d900;
+        box-shadow: 0 2px 0 #e6d900;
+      }
 
 
